<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context=".SimpleQuoteWidgetConfigurationActivity"
            tools:showIn="@layout/activity_simple_quote_configuration">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            app:cardCornerRadius="10dp"
            app:cardElevation="@dimen/cardview_default_elevation"
            android:layout_width="match_parent"
            android:layout_marginBottom="24dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_quote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/caveat_bold"
                    android:gravity="center"
                    android:text="@string/sample_quote"/>

                <TextView
                    android:id="@+id/text_author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/caveat_regular"
                    android:gravity="center"
                    android:text="@string/sample_author"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_height="wrap_content">
            <Button
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:id="@+id/btn_color_quote"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_choose_color"/>

            <Button
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:id="@+id/btn_color_bg"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_choose_bg_color"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content">
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_show_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Author"
                />
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_show_bg"
                android:layout_marginStart="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Background"
                />
        </LinearLayout>

        <TextView
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/text_size_quote"/>

        <SeekBar
            android:id="@+id/seekbar_quote_text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="48"
            android:min="10"
            android:stepSize="5"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"/>


        <TextView
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/text_size_author"/>

        <SeekBar
            android:id="@+id/seekbar_author_text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="48"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_quote_source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Write your quote"
            />
        <LinearLayout
            android:id="@+id/view_quote_src_link"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:minLines="3"
                android:layout_height="wrap_content"
                app:helperText="link should respond with JSON array like [{'quote': 'sample quote', 'author': 'Doctor'}, ...]"
                android:hint="@string/source_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_quote_link"
                    android:layout_width="match_parent"
                    android:maxLines="2"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_test_link"
                android:enabled="false"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_gravity="center"
                android:text="Test Link"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/view_quote_src_text"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Quote Text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_quotes_content"
                    android:layout_width="match_parent"
                    android:maxLines="3"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Author">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_quote_author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>